--- a/Web1/Views/Categories/Index.cshtml
+++ b/Web1/Views/Categories/Index.cshtml
@@ -16,7 +16,7 @@
             <div class="col">
                 
                 <div class="card h-100 shadow-sm">
-                    <img src="@item.ImageUrl" class="card-img-top" alt="@item.Name" style="height: 200px; object-fit: cover;">
+                    <img src="/images/400_@item.Image" class="card-img-top" alt="@item.Name" style="height: 200px; object-fit: cover;" >
                     <a href="@Url.Action("Edit",item)" class="position-absolute top-0 end-2 m-2">
                         <img src="https://cdn-icons-png.flaticon.com/512/4226/4226577.png" alt="Edit" style="width: 24px; height: 24px;">
                     </a>
