--- a/Web1/Views/Categories/Index.cshtml
+++ b/Web1/Views/Categories/Index.cshtml
@@ -1,34 +1,53 @@
-﻿
-@{
-    //Layout = null;// не використовувати обгортку сторінки (базовий вигляд)
-
-}
-
-@model List<Web1.Models.Category.CategoryItemViewModel> // створення списку, в який записується список в параметрах View
+﻿@model List<CategoryItemViewModel>
 
 <div class="container mt-5">
     <h2 class="text-center mb-4">Категорії мультфільмів</h2>
-    <a href="@Url.Action("Create")" class="btn btn-success">Add category</a> @* тут буде в силці посилання на сторінку для створення категорії, автоматично підтягує до Create - Category, бо ми в файлі Categories *@
+    <a href="@Url.Action("Create")" class="btn btn-success">Додати</a>
     <div class="row row-cols-1 row-cols-md-3 g-4">
-       
         @foreach (var item in Model)
         {
+            var modalId = $"confirmDeleteModal_{item.Id}";
+
             <div class="col">
-                
-                <div class="card h-100 shadow-sm">
-                    <img src="/images/400_@item.Image" class="card-img-top" alt="@item.Name" style="height: 200px; object-fit: cover;" >
-                    <a href="@Url.Action("Edit",item)" class="position-absolute top-0 end-2 m-2">
-                        <img src="https://cdn-icons-png.flaticon.com/512/4226/4226577.png" alt="Edit" style="width: 24px; height: 24px;">
-                    </a>
-                    <a href="@Url.Action("Delete",item)" class="position-absolute top-0 end-0 m-2">
-                        <img src="https://cdn-icons-png.flaticon.com/512/5820/5820762.png" alt="Edit" style="width: 24px; height: 24px;">
-                    </a>
+                <div class="card h-100 shadow-sm position-relative">
+                    <img src="/images/400_@item.Image" class="card-img-top" alt="@item.Name" style="height: 200px; object-fit: cover;">
                     <div class="card-body">
                         <h5 class="card-title">@item.Name</h5>
                         <p class="card-text">@item.Description</p>
+                    </div>
+
+                    <div class="position-absolute top-0 end-2 p-3 delete-btn">
+                        <button class="btn" data-bs-toggle="modal" data-bs-target="#@modalId">
+                            <img src="https://cdn-icons-png.flaticon.com/512/5820/5820762.png" alt="Edit" style="width: 24px; height: 24px;">
+                        </button>
+                    </div>
+                    <a asp-route-id="@item.Id" asp-action="Edit" class="position-absolute top-0 end-0 m-2">
+                        <img src="https://cdn-icons-png.flaticon.com/512/4226/4226577.png" alt="Edit" style="width: 24px; height: 24px;">
+                    </a>
+                </div>
+            </div>
+
+
+            <div class="modal fade" id="@modalId" tabindex="-1">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="label_@item.Id">Підтвердження видалення</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            Ви дійсно хочете видалити категорію <strong>@item.Name</strong>?
+                        </div>
+                        <div class="modal-footer">
+                            <form asp-action="Delete">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Скасувати</button>
+                                <button type="submit" class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">Видалити</button>
+                            </form>
+                        </div>
                     </div>
                 </div>
             </div>
         }
     </div>
+
 </div>
