--- a/Web1/Views/_ViewImports.cshtml
+++ b/Web1/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Web1
 @using Web1.Models
 @using Web1.Models.Category
+@using Web1.Models.User
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
