Added user seeder, create and login

--- a/Web1/Views/Users/Create.cshtml
+++ b/Web1/Views/Users/Create.cshtml
@@ -1,13 +1,17 @@
 ﻿@model UserCreateViewModel
 
 @{
-    ViewData["Title"] = "Sign Up";
+    ViewData["Title"] = "Зареєструватися";
 }
 
-<h2 class="mb-4">Create an Account</h2>
+@{
+    Layout = "_EnterPageLayout";
+}
 
-<form asp-action="SignUp" method="post" enctype="multipart/form-data">
-    <div class="row">
+
+<form asp-action="Create" method="post" enctype="multipart/form-data" class="p-4 shadow rounded bg-light my-5" style="max-width: 600px; margin: auto;">
+    <h2 class="mb-4">Створити акаунт</h2>
+    <div class="row g-3">
         <div class="col-md-6 mb-3">
             <label asp-for="Name" class="form-label"></label>
             <input asp-for="Name" class="form-control" />
@@ -20,37 +24,50 @@
         </div>
     </div>
 
-    <div class="mb-3">
-        <label asp-for="Nickname" class="form-label"></label>
-        <input asp-for="Nickname" class="form-control" />
-        <span asp-validation-for="Nickname" class="text-danger"></span>
+    <div class="row g-3">
+        <div class="col-md-6 mb-3">
+            <label asp-for="Nickname" class="form-label"></label>
+            <input asp-for="Nickname" class="form-control" />
+            <span asp-validation-for="Nickname" class="text-danger"></span>
+        </div>
+
+        <div class="col-md-6 mb-3">
+            <label asp-for="Email" class="form-label"></label>
+            <input asp-for="Email" class="form-control" />
+            <span asp-validation-for="Email" class="text-danger"></span>
+        </div>
+    </div>
+    
+    <div class="row g-3">
+        <div class="col-md-6 mb-3">
+            <label asp-for="Password" class="form-label"></label>
+            <input asp-for="Password" class="form-control" />
+            <span asp-validation-for="Password" class="text-danger"></span>
+        </div>
+
+        <div class="col-md-6 mb-3">
+            <label asp-for="Phone" class="form-label"></label>
+            <input asp-for="Phone" class="form-control" />
+            <span asp-validation-for="Phone" class="text-danger"></span>
+        </div>
+    </div>>
+
+    
+
+    <div class="row">
+        <div class="col-md-3">
+            <img src="/pictures/userDefault.png" id="imagePreview" width="100%" />
+        </div>
+        <div class="col-md-9">
+            <div class="mb-3">
+                <label asp-for="ImageFile" class="form-label">Profile Picture</label>
+                <input asp-for="ImageFile" type="file" class="form-control" />
+                <span asp-validation-for="ImageFile" class="text-danger"></span>
+            </div>
+        </div>
     </div>
 
-    <div class="mb-3">
-        <label asp-for="Email" class="form-label"></label>
-        <input asp-for="Email" class="form-control" />
-        <span asp-validation-for="Email" class="text-danger"></span>
-    </div>
-
-    <div class="mb-3">
-        <label asp-for="Password" class="form-label"></label>
-        <input asp-for="Password" class="form-control" />
-        <span asp-validation-for="Password" class="text-danger"></span>
-    </div>
-
-    <div class="mb-3">
-        <label asp-for="Phone" class="form-label"></label>
-        <input asp-for="Phone" class="form-control" />
-        <span asp-validation-for="Phone" class="text-danger"></span>
-    </div>
-
-    <div class="mb-3">
-        <label asp-for="ImageFile" class="form-label">Profile Picture</label>
-        <input asp-for="ImageFile" type="file" class="form-control" />
-        <span asp-validation-for="ImageFile" class="text-danger"></span>
-    </div>
-
-    <button type="submit" class="btn btn-primary">Зареєструватися</button>
+    <button type="submit" class="btn btn-primary my-2" style="margin-left:36%;">Зареєструватися</button>
 </form>
 
 @section Scripts {
