Fix position of some elements

--- a/Web1/Views/Categories/Index.cshtml
+++ b/Web1/Views/Categories/Index.cshtml
@@ -16,7 +16,7 @@
                         <p class="card-text">@item.Description</p>
                     </div>
 
-                    <div class="position-absolute top-0 end-2 p-3 delete-btn">
+                    <div class="position-absolute top-0 end-2 delete-btn">
                         <button class="btn" data-bs-toggle="modal" data-bs-target="#@modalId">
                             <img src="https://cdn-icons-png.flaticon.com/512/5820/5820762.png" alt="Edit" style="width: 24px; height: 24px;">
                         </button>
