--- a/Web1/Views/Users/Create.cshtml
+++ b/Web1/Views/Users/Create.cshtml
@@ -60,7 +60,7 @@
         </div>
         <div class="col-md-9">
             <div class="mb-3">
-                <label asp-for="ImageFile" class="form-label">Profile Picture</label>
+                <label asp-for="ImageFile" class="form-label"></label>
                 <input asp-for="ImageFile" type="file" class="form-control" />
                 <span asp-validation-for="ImageFile" class="text-danger"></span>
             </div>
