--- a/Web1/Views/Shared/_MyLayout.cshtml
+++ b/Web1/Views/Shared/_MyLayout.cshtml
@@ -17,7 +17,7 @@
     </style>
 </head>
 <body>
-    @* @model Web1.Data.Entities.Identity.UserEntity *@
+   
 
     <header data-bs-theme="dark">
         <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
@@ -28,9 +28,12 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <ul class="navbar-nav me-auto mb-2 mb-md-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
-                        </li>
+                        @if (User.IsInRole("admin"))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" asp-action="Index" asp-controller="Home" asp-area="Admin">Адмін панель</a>
+                            </li>
+                        }}
                         <li class="nav-item">
                             <a class="nav-link" href="#">Link</a>
                         </li>
