--- a/Web1/Areas/Admin/Views/Shared/_ContentNavbarLayout.cshtml
+++ b/Web1/Areas/Admin/Views/Shared/_ContentNavbarLayout.cshtml
@@ -29,7 +29,8 @@
 @section VendorScripts{ @RenderSection("VendorScripts", required: false) }
 
 @section PageScripts{ @RenderSection("PageScripts", required: false) }
-@await RenderSectionAsync("Scripts", required: false)
+
+@* @RenderSectionAsync("Scripts", required: false) *@
 
 @{
   bool isMenu = ViewData["isMenu"] != null && Convert.ToBoolean(ViewData["isMenu"]);
