--- a/Web1/Areas/Admin/Views/Users/Edit.cshtml
+++ b/Web1/Areas/Admin/Views/Users/Edit.cshtml
@@ -1,34 +1,38 @@
 ﻿
 @model UserEditViewModel
 
+@* <style> *@
+@*     .cropper-hidden { *@
+@*         display: none !important; *@
+@*     } *@
+@* </style> *@
 
 <div class="card-body pt-0">
     <form asp-action="Edit" id="formAccountSettings" method="post" enctype="multipart/form-data">
         <div class="card-body">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="row">
-                <div class="mb-3 text-center">
-                    <label asp-for="ImageFile" class="d-block">
-                        <img id="defaultAvatar"
-                             src="/pictures/default.png"
-                             alt="Аватар"
-                             class="rounded-circle border"
-                             style="width: 150px; height: 150px; object-fit: cover; cursor: pointer;" />
+        <div class="mb-3 text-center">
+            <label asp-for="ImageFile" class="d-block">
+                <img id="defaultAvatar"
+                     src="/pictures/default.png"
+                     alt="Аватар"
+                     class="rounded-circle border"
+                     style="width: 150px; height: 150px; object-fit: cover; cursor: pointer;" />
 
-                        <div id="croppedPreview"
-                             class="rounded-circle border d-none mx-auto"
-                             style="width: 150px; height: 150px; object-fit: cover; overflow: hidden; cursor: pointer"></div>
-                    </label>
+                <div id="croppedPreview"
+                     class="rounded-circle border d-none mx-auto"
+                     style="width: 150px; height: 150px; object-fit: cover; overflow: hidden; cursor: pointer"></div>
+            </label>
 
-                    <input asp-for="ImageFile"
-                           type="file"
-                           id="ImageFile"
-                           accept="image/*"
-                           class="d-none" />
-                    <input type="hidden" id="croppedImageData" name="CroppedImage" />
-                </div>
+            <input asp-for="ImageFile"
+                   type="file"
+                   id="ImageFile"
+                   accept="image/*"
+                   class="d-none" />
+        </div>
 
-                @await Html.PartialAsync("_ImageCropper")
+        @await Html.PartialAsync("_ImageCropper")
             </div>
         </div>
         <div class="row mt-1 g-5">
@@ -106,19 +110,7 @@
 
 </div>
 
-@section Scripts {
-    @{
-        await Html.RenderPartialAsync("_ValidationScriptsPartial");
-    }
+@section PageScripts {
     <script src="/js/cropper.min.js"></script>
-    <script src="/js/cropImageOnForm.js"></script>
-
-    <script>
-            document.addEventListener("DOMContentLoaded", function () {
-            let croppingImage = document.getElementById("croppingImage");
-            console.log("croppingImage", croppingImage);
-            croppingImage.hidden=true;
-            
-        });
-    </script>
+    <script src="/js/cropImageOnUser.js"></script>
 }
