--- a/Web1/Areas/Admin/Views/Shared/Sections/Menu/_VerticalMenu.cshtml
+++ b/Web1/Areas/Admin/Views/Shared/Sections/Menu/_VerticalMenu.cshtml
@@ -9,7 +9,7 @@
 
   @* ! Hide app brand if navbar-full *@
   <div class='app-brand demo @((@ViewData["navbarFull"] != null && Convert.ToBoolean(@ViewData["navbarFull"])) ? "d-xl-none" : "")'>
-    <a asp-controller="Dashboards" asp-action="Index" class="app-brand-link">
+    <a asp-controller="Categories" asp-area="" asp-action="Index" class="app-brand-link">
       <span class="app-brand-logo demo me-1">  @await Html.PartialAsync("../_Partials/_Macros")</span>
       <span class="app-brand-text demo menu-text fw-semibold ms-2">@TempData.Peek("appName")</span>
     </a>
@@ -29,16 +29,17 @@
 
         <li class='menu-item@(currentPage.EndsWith("/admin") || currentPage.StartsWith("/Users") ? " active open" : "")'>
             <a href="javascript:void(0);" class="menu-link menu-toggle">
-                <i class="menu-icon tf-icons ri-layout-left-line"></i>
+                <i class="menu-icon tf-icons ri-layout-2-line"></i>
                 <div>Account Settings</div>
             </a>
+
             <ul class="menu-sub">
-                <li class='menu-item@(currentPage == "/admin" ? " active" : "")'>
+
+                <li class='menu-item@(currentPage == "/admin/Users/Index" ? " active" : "")'>
                     <a asp-controller="Users" asp-action="Index" class="menu-link">
                         <div>Користувачі</div>
                     </a>
                 </li>
-
             </ul>
         </li>
         
