Added product create

--- a/Web1/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Web1/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Web1.Areas.Admin
 @using Web1.Areas.Admin.Models
 @using Web1.Areas.Admin.Models.Users
+@using Web1.Areas.Admin.Models.Products
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
