--- a/Web1/Views/Products/Index.cshtml
+++ b/Web1/Views/Products/Index.cshtml
@@ -2,10 +2,9 @@
 
 <div class="container mt-5">
     <h2 class="text-center mb-4">Категорії</h2>
-    @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
+    @if (User.Identity.IsAuthenticated && User.IsInRole("admin"))
     {
-        <a href="@Url.Action("Create")
-            " class="btn btn-success">Додати</a>
+        <a asp-controller="Products" asp-action="Create" class="btn btn-success">Додати</a>
     }
     <div class="row row-cols-1 row-cols-md-3 g-4">
         @foreach (var item in Model)
