--- a/Web1/Views/_ViewImports.cshtml
+++ b/Web1/Views/_ViewImports.cshtml
@@ -2,4 +2,5 @@
 @using Web1.Models
 @using Web1.Models.Category
 @using Web1.Models.Account
+@using Web1.Models.Product
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
