--- a/Web1/Areas/Admin/Views/Shared/Sections/Menu/_VerticalMenu.cshtml
+++ b/Web1/Areas/Admin/Views/Shared/Sections/Menu/_VerticalMenu.cshtml
@@ -29,15 +29,35 @@
 
         <li class='menu-item@(currentPage.EndsWith("/admin") || currentPage.StartsWith("/Users") ? " active open" : "")'>
             <a href="javascript:void(0);" class="menu-link menu-toggle">
-                <i class="menu-icon tf-icons ri-layout-2-line"></i>
+                <i class="menu-icon tf-icons ri-layout-left-line"></i>
                 <div>Account Settings</div>
             </a>
-
             <ul class="menu-sub">
-
-                <li class='menu-item@(currentPage == "/admin/Users/Index" ? " active" : "")'>
+                <li class='menu-item@(currentPage == "/admin" ? " active" : "")'>
                     <a asp-controller="Users" asp-action="Index" class="menu-link">
                         <div>Користувачі</div>
+                    </a>
+                </li>
+
+            </ul>
+        </li>
+
+
+        <!-- Products -->
+        <li class='menu-item@(currentPage.StartsWith("/admin/Products") ? " active open" : "")'>
+            <a href="javascript:void(0);" class="menu-link menu-toggle">
+                <i class="menu-icon tf-icons ri-box-3-line"></i>
+                <div>Продукти</div>
+            </a>
+            <ul class="menu-sub">
+                <li class='menu-item@(currentPage == "/admin/Products" ? " active" : "")'>
+                    <a asp-controller="Products" asp-action="Index" class="menu-link">
+                        <div>Перегляд</div>
+                    </a>
+                </li>
+                <li class='menu-item@(currentPage == "/admin/Products/Create" ? " active" : "")'>
+                    <a asp-controller="Products" asp-action="Create" class="menu-link">
+                        <div>Додати</div>
                     </a>
                 </li>
             </ul>
