--- a/Web1/Areas/Admin/Views/Products/Index.cshtml
+++ b/Web1/Areas/Admin/Views/Products/Index.cshtml
@@ -64,7 +64,6 @@
 						</td>
 						<td>@item.Name</td>
 						<td style="max-width: 300px; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;">
-							@* @Html.Raw(@item.Description) *@ @* перетворює код html в звичайний *@
 							@Html.Raw(
 									item.Description != null
 									? Regex.Replace(item.Description, "<.*?>", "").Substring(0, Math.Min(30, Regex.Replace(item.Description, "<.*?>", "").Length)) + "..."
@@ -77,9 +76,14 @@
 						<td>
 							<div class="dropdown">
 								<button type="button" class="btn p-0 dropdown-toggle hide-arrow" data-bs-toggle="dropdown"><i class="ri-more-2-line"></i></button>
-								<div class="dropdown-menu">
+								
+							    <div class="dropdown-menu">
 									<a class="dropdown-item"><i class="ri-pencil-line me-1"></i> Edit</a>
-									<a class="dropdown-item"><i class="ri-delete-bin-6-line me-1"></i> Delete</a>
+									<form asp-action="Delete" enctype="multipart/form-data">
+										<button type="submit" class="btn hide-arrow " asp-action="Delete" asp-route-id="@item.Id">
+											<i class="ri-delete-bin-6-line me-1"></i>Delete
+										</button>
+									</form>
 								</div>
 							</div>
 						</td>
