--- a/Web1/Views/Account/Login.cshtml
+++ b/Web1/Views/Account/Login.cshtml
@@ -5,28 +5,36 @@
     ViewData["Title"] = "Увійти";
 }
 
-@* @{
-    Layout = "_EnterPageLayout";
+ <div class="offset-md-3 col-md-6">
+    <form asp-action="Login" method="post" enctype="multipart/form-data" class="p-4 shadow rounded bg-light my-5" style="max-width: 400px; margin: auto;">
+        <h2 class="mb-4">Увійти в акаунт</h2>
+
+
+        <div class="mb-3">
+            <label asp-for="Email" class="form-label"></label>
+            <input type="email" asp-for="Email" class="form-control" />
+            <span asp-validation-for="Email" class="text-danger"></span>
+        </div>
+
+        <div class="mb-0">
+            <label asp-for="Password" class="form-label"></label>
+            <input type="password" asp-for="Password" class="form-control" />
+            <span asp-validation-for="Password" class="text-danger"></span>
+        </div>
+
+        <div class="mb-2 text-end">
+            <a asp-action="ForgotPassword" class="btn btn-link align">Відновити пароль</a>
+        </div>
+
+        <div class="mb-3">
+            <input type="submit" value="Увійти" class="btn btn-primary" />
+            <a asp-action="Create" class="btn btn-light">Зареєструватися</a>
+        </div>
+    </form>
+ </div>
+
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
- *@
-
-<form asp-action="Login" method="post" enctype="multipart/form-data" class="p-4 shadow rounded bg-light my-5" style="max-width: 400px; margin: auto;">
-    <h2 class="mb-4">Увійти в акаунт</h2>
-    
-
-    <div class="mb-3">
-        <label asp-for="Email" class="form-label"></label>
-        <input type="email" asp-for="Email" class="form-control" />
-        <span asp-validation-for="Email" class="text-danger"></span>
-    </div>
-
-    <div class="mb-3">
-        <label asp-for="Password" class="form-label"></label>
-        <input type="password" asp-for="Password" class="form-control" />
-        <span asp-validation-for="Password" class="text-danger"></span>
-    </div>
-
-
-    <button type="submit" class="btn btn-primary my-2" style="margin-left:42%;">Увійти</button>
-</form>
-
