--- a/Web1/Views/Products/Index.cshtml
+++ b/Web1/Views/Products/Index.cshtml
@@ -2,9 +2,7 @@
 @model ProductListViewModel
 
 <div class="container mt-5">
-    <h2 class="text-center mb-4">Категорії</h2>
-
-
+    <h2 class="text-center mb-4">Фільми</h2>
 
     @await Html.PartialAsync("_ProductSearchItems", Model.Search)
 
@@ -13,10 +11,17 @@
     {
         <a asp-controller="Products" asp-action="Create" class="btn btn-success">Додати</a>
     }
-   
+
     <div class="alert alert-primary mt-2" role="alert">
         Кількість елементів: <strong>@Model.Count</strong>
     </div>
+    @if (Model.Count == 0)
+    {
+        <div class="border rounded p-3 text-muted text-center bg-light">
+            <i class="bi bi-search me-2"></i>
+            Фільмів за вашим запитом не знайдено
+        </div>
+    }
     @await Html.PartialAsync("_ListProductItems", Model.Products)
 </div>
 
